# qwen3-tts-openvino

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  README.zh-CN.md  compress_openvino_weights.py  infer_openvino_full.py  pyproject.toml
.github/workflows/: real-tts.yml  release-ir.yml  release-linux.yml  release-runtime.yml  release-windows.yml  windows-gpu-npu.yml
devtools/: README.zh-CN.md
devtools/bench/: benchmark_streaming_realtime_experiments.py  profile_streaming_pipeline.py  quantize_legacy_ir.py
devtools/legacy/: export_openvino_qwen3_tts.py
docs/: README.md  README.zh-CN.md  api_reference.md  api_reference_zh.md  artifacts_zh.md  cache_zh.md  development_zh.md  export_zh.md  model_components.md  model_components_zh.md  prerequisites.md  prerequisites_zh.md  quick_start.md  quick_start_zh.md  release.md  release_zh.md  runtime_zh.md  security_zh.md  streaming_zh.md  troubleshooting.md  troubleshooting_zh.md  windows_gpu_npu_zh.md
docs/experiments/: 2026-05-15-fast-path-profile-sweep.zh-CN.md  README.zh-CN.md  realtime-optimization-history.zh-CN.md
docs/releases/: README.zh-CN.md  v0.1.4.md
examples/: README.md  README.zh-CN.md  custom_voice_request.example.json  long_text_zh.example.txt  openai_speech_request.example.json  requests.example.jsonl  stream_request.example.json  voice_clone_request.example.json
examples/python/: http_tts_wav.py  openai_speech.py  websocket_stream_pcm.py
native/qwen3_tts_ov_genai/: CMakeLists.txt  README.md  qwen3_tts_cli.cpp  qwen3_tts_codegen.cpp  qwen3_tts_codegen.h  qwen3_tts_paged_kv_tool.cpp
qwen3_tts_ov/: __init__.py  audio.py  build_fastest.py  cache.py  cache_warmup.py  cli.py  default_policy.py  default_policy_summary.json  exporter.py  fast_path.py  manifest.py  model_download.py  native_codegen.py  npu_offload_profile.py  online_batch.py  profiles.py  release_server.py  runtime.py  server.py  web_client.py
qwen3_tts_ov/web_static/: __init__.py  web_demo.css  web_demo.html  web_demo.js
scripts/: README.zh-CN.md  analyze_windows_gpu_npu_results.py  audit_paged_kv_conversion.py  audit_prefill_quality_coverage.py  benchmark_fast_cache.py  benchmark_online_continuous_batch.py  benchmark_prompt_batch_matrix.py  benchmark_streaming_realtime.py  benchmark_tts_length_scaling.py  benchmark_windows_gpu_npu_release.py  build_native_codegen.py  build_paged_kv_tool.py  collect_windows_accelerator_counters.ps1  compress_openvino_weights.py  convert_paged_kv_graphs.py  download_hf_ir.py  env.sh  evaluate_default_policy_quality.py  evaluate_long_text_quality.py  evaluate_prefill_quality.py  evaluate_single_arch_gate.py  package_ir.py  package_release.py  probe_windows_gpu_npu.py  smoke_release_package.py  smoke_release_tts.py  upload_hf_ir.py  verify_codegen_fusion_correctness.py  verify_long_autoregressive_parity.py  verify_paged_kv_correctness.py  windows_gpu_npu_benchmark.ps1  windows_gpu_npu_smoke.ps1
tests/: test_audio.py  test_benchmark_script.py  test_build_fastest.py  test_cache_config.py  test_default_policy.py  test_docs_examples.py  test_quality_evaluator.py  test_release_packaging.py  test_server_long_text.py  test_server_openai_api.py  test_streaming_runtime.py  test_web_client.py  test_windows_gpu_npu_path.py
