[project]
name = "qwen3-tts-openvino"
version = "0.1.3"
description = "OpenVINO runtime and exporter for Qwen3-TTS 12 Hz models."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Qwen3-TTS OpenVINO contributors" }]
keywords = ["qwen3-tts", "openvino", "text-to-speech", "tts"]
dependencies = [
  "huggingface-hub>=0.34.0,<1.0",
  "numpy",
  "openvino",
  "regex",
  "soundfile",
  "soxr",
]

[project.optional-dependencies]
export = [
  "accelerate",
  "einops",
  "torch",
  "transformers",
  "nncf",
  "modelscope",
  "openvino-tokenizers",
  "sox",
  "torchaudio",
]
server = [
  "fastapi",
  "uvicorn",
  "websockets",
]
quality = [
  "openai",
  "python-dotenv",
]
native = [
  "openvino-genai",
  "openvino-tokenizers",
]
audio-full = [
  "librosa",
]
release = [
  "pyinstaller",
  "zstandard",
]
dev = [
  "httpx",
  "pytest",
  "ruff",
  "ty",
]

[project.scripts]
qwen3-tts-ov = "qwen3_tts_ov.cli:main"
qwen3-tts-ov-server = "qwen3_tts_ov.release_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["qwen3_tts_ov", "qwen3_tts_ov.web_static"]

[tool.setuptools.package-data]
qwen3_tts_ov = ["default_policy_summary.json"]
"qwen3_tts_ov.web_static" = ["*.html", "*.css", "*.js"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
  "third_party",
  "models",
  "openvino",
  "openvino_full",
  "outputs",
  "native/build",
]

[tool.ty.src]
include = [
  "qwen3_tts_ov/__init__.py",
  "qwen3_tts_ov/__main__.py",
  "qwen3_tts_ov/audio.py",
  "qwen3_tts_ov/build_fastest.py",
  "qwen3_tts_ov/cache.py",
  "qwen3_tts_ov/cache_warmup.py",
  "qwen3_tts_ov/cli.py",
  "qwen3_tts_ov/default_policy.py",
  "qwen3_tts_ov/fast_path.py",
  "qwen3_tts_ov/manifest.py",
  "qwen3_tts_ov/model_download.py",
  "qwen3_tts_ov/npu_offload_profile.py",
  "qwen3_tts_ov/online_batch.py",
  "qwen3_tts_ov/profiles.py",
  "qwen3_tts_ov/release_server.py",
  "qwen3_tts_ov/web_client.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["third_party", ".venv", "openvino", "openvino_full", "outputs"]
